--- a/Latihan 1/index.html
+++ b/Latihan 1/index.html
@@ -16,7 +16,7 @@
             <p><span class="underline-magical">Freelancer's</span> option</span></p>
         </div>
         <div class="posbuttonprimary">
-            <button class="primary-btn">Browse Project</button>
+            <button class="primary-btn"><a href="#teams" style="text-decoration: none;" class="browse-button">Browse Project</a></button>
         </div>
 
         <div id="menu-items">
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="content">
-        <h1><span class="underline-magical">Team</span></h1>
+        <h1 id="teams"><span class="underline-magical">Team</span></h1>
     </div>
 <script type="text/javascript" src="java.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
