Blvck Deer's Assets

--- a/Web Programming/Non-Gradient Master/index.html
+++ b/Web Programming/Non-Gradient Master/index.html
@@ -5,24 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Blvck Deer</title>
+    <link rel="icon" href="favicon.png">
+    <title>Blvck Deer | Creative Solution</title>
 </head>
 <body>
-    <h1 class="logo">Blvck Deer</h1>
+    <div class="header">
+        <img src="favicon.png" alt="logo">
+        <h1>Blvck Deer</h1>
+    </div>
+
     <ul class="menu">
-        <li><a href="#" style="color: white;">Home</a></li>
+        <li><a href="#" style="color: white;border-bottom: 1.3px solid #7a4aff;
+            text-decoration: none; padding-bottom: 5px;">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Info</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">Pricing</a></li>
     </ul>
 
-    <p class="recent">Recent Project</p>
-    <p class="none">None</p>
+    <div class="project">
+        <h3>Recent Project</h3>
+        <p>None</p>
+    </div>
 
-    <h1 class="offer">What do we offer?</h1>
-    <p class="content">Considering our experience and a strong team we offer you a full-cycle service. Deep analysis, industry-specific design and high-quality development let us create 
-        unique products which help you to grow and make users’ interaction easier.Even after the launch to keep the projects up-to-date and regularly boosted we’ll 
-        provide you a constant support.</p>
+    <div class="feature">
+        <h1>What do we offer?</h1>
+        <p>Considering our experience and a strong team we offer you a full-cycle service. Deep analysis, industry-specific design and high-quality development let us create 
+            unique products which help you to grow and make users’ interaction easier.Even after the launch to keep the projects up-to-date and regularly boosted we’ll 
+            provide you a constant support.</p s>
+    </div>
 </body>
 </html>
