--- a/Web Programming/Non-Gradient Arbhy/index.html
+++ b/Web Programming/Non-Gradient Arbhy/index.html
@@ -1,54 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Blvck Deer | A freelancer option</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style.css" />
 </head>
+
 <body>
     <nav>
-        <div class="brand-container">
-            <a class="nav-brand blvck-deer nav-link" href="#">Blvck Deer</a>
-            <a class="brand-chant">A freelancer's otion</a>
+        <div class="container d-flex">
+            <div class="brand-container">
+                <a class="nav-brand blvck-deer nav-link" href="#">Blvck Deer</a>
+                <a class="brand-chant">Fast peformance wireframe</a>
+            </div>
+            <ul class="nav-menu">
+                <li class="menu-list"><a href="#" class="nav-link active">Home</a></li>
+                <li class="menu-list"><a href="#" class="nav-link">About</a></li>
+                <li class="menu-list"><a href="#" class="nav-link">Info</a></li>
+                <li class="menu-list"><a href="#" class="nav-link">Contact</a></li>
+                <li class="menu-list"><a href="#" class="nav-link">Pricing</a></li>
+            </ul>
         </div>
-        <ul class="nav-menu">
-            <li class="menu-list"><a href="#" class="nav-link active">Home</a></li>
-            <li class="menu-list"><a href="#" class="nav-link">About</a></li>
-            <li class="menu-list"><a href="#" class="nav-link">Info</a></li>
-            <li class="menu-list"><a href="#" class="nav-link">Contact</a></li>
-            <li class="menu-list"><a href="#" class="nav-link">Pricing</a></li>
-        </ul>
     </nav>
 
     <div class="container">
         <section class="project">
             <p>Recent Project</p>
-            <div class="card">
-
-            </div>
-            <div class="card">
-                
-            </div>
-            <div class="card">
-                
+            <div class="d-flex" style="margin-top: 20px;">
+                <div class="project-card">
+                    <div class="project-card-container d-flex">
+                        <div class="project-card-info">
+                            <h3>Motion Stars</h3>
+                            <p>Stars Production</p>
+                        </div>
+                        <div class="project-card-action">
+                            <div class="circle-icon"></div>
+                            <div class="circle-icon"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-card-container d-flex">
+                        <div class="project-card-info">
+                            <h3>Motion Stars</h3>
+                            <p>Stars Production</p>
+                        </div>
+                        <div class="project-card-action">
+                            <div class="circle-icon"></div>
+                            <div class="circle-icon"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-card-container d-flex">
+                        <div class="project-card-info">
+                            <h3>Motion Stars</h3>
+                            <p>Stars Production</p>
+                        </div>
+                        <div class="project-card-action">
+                            <div class="circle-icon"></div>
+                            <div class="circle-icon"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
-        <section class="offering" style="margin-top: 100px">
-            <h1 class="session-title ">What do we offer?</h1>
-            <div class="content">
+        <section class="offering">
+            <div class="d-flex">
+                <h1 class="section-title ">What do we offer?</h1>
+                <div class="content">
                     <p>
-                        Considering our experience and a strong team we offer you a full-cycle service.
-                        Deep analysis, industry-specific design and high-quality development let us create
-                        unique products which help you to grow and make users’ interaction easier.
+                        Considering our experience and a strong team we offer you a
+                        full-cycle service. Deep analysis, industry-specific design and
+                        high-quality development let us create unique products which help
+                        you to grow and make users’ interaction easier.
                     </p>
-                    <p> 
-                        Even after the launch to keep the projects up-to-date and regularly boosted
-                        we’ll provide you a constant support.
+                    <p>
+                        Even after the launch to keep the projects up-to-date and regularly
+                        boosted we’ll provide you a constant support.
                     </p>
+                </div>
+            </div>
+            <div class="d-flex">
+                <div class="profile-card">
+                    <div class="profile-container">
+                        <div class="container-inside">
+                            <div class="profile-circle"></div>
+                            <div class="account-box">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-card"></div>
+                <div class="profile-card"></div>
             </div>
         </section>
     </div>
 </body>
+
 </html>
